# AI-human-inventory-game

./: .gitignore  README.md  pyproject.toml
H&M_instances/biweely_H&M_instances/372860001/: test.csv
H&M_instances/biweely_H&M_instances/464297007/: llm_1.txt  llm_2.txt  llm_3.txt  llm_4.txt  llm_5.txt  llm_to_or_1.txt  llm_to_or_2.txt  llm_to_or_3.txt  llm_to_or_4.txt  llm_to_or_5.txt  or_5.txt  or_to_llm_1.txt  or_to_llm_2.txt  or_to_llm_3.txt  or_to_llm_4.txt  or_to_llm_5.txt  (+2 more)
app/: README.md  SCALABILITY_ANALYSIS.md  __init__.py  main.py  requirements.txt
app/backend/: __init__.py  app.py  config.py  simulation_current.py  storage.py  supabase_client.py  test_carry_over_injection.py  token_verifier.py
app/core/: or_csv_demo.py  or_to_llm_csv_demo.py
app/docs/: DEVELOPMENT.md
app/frontend/: index.html  modeA.html  modeB.html  modeC.html
examples/: aggregate_real_small_batch.py  benchmark_all_strategies.py  llm_csv_demo.py  llm_to_or_csv_demo.py  or_to_llm_csv_demo.py  perfect_score.py  rerun_llm_to_or.py  rerun_llm_to_or_two.py  run_batch_benchmark.py  simple_llm_to_or_demo.py
examples/benchmark/: BENCHMARK_SPECIFICATION.md  EXPERIMENT_DESIGN.md  SYNTHETIC_BENCHMARK_SPECIFICATION.md  check_all_instances_complete.py  check_real_trajectory_csv.py  check_test_cases_structure.py  cleanup_benchmark_results.py  generate_real_trajectory.py  generate_synthetic_trajectories.py  modify_real_trajectory_ph.py  repro_subprocess_658030001.py  verify_real_trajectory_spec.py  verify_synthetic_trajectory_spec.py
examples/fullstack_demo/: .env.example  README.md
(+1905 files in other folders)
